--- a/sections/footer/footer-travel-unsubscribe.html
+++ b/sections/footer/footer-travel-unsubscribe.html
@@ -6,96 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Footer Travel Unsubscribe</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            margin: 0;
-            padding: 20px;
-            background: #f5f5f5;
-            font-family: Arial, sans-serif;
+        /* Minimal styles - only for flexbox wrapper which can't be inline */
+        .footer-unsubscribe-wrapper {
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            min-height: 100vh;
+            gap: 20px;
+            align-items: center;
+            justify-content: space-between;
         }
-        .email-container {
-            max-width: 600px;
-            width: 100%;
-            margin: 0 auto;
-            background: #333333;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-        .email-container table {
-            max-width: 600px !important;
-            width: 100% !important;
-        }
-        table {
-            width: 100% !important;
-            max-width: 600px !important;
-            border-collapse: collapse;
-        }
-        table[width] {
-            max-width: 600px !important;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            border: 0;
-        }
-        a {
-            color: inherit;
-            text-decoration: none;
-        }
-        table[role="presentation"] {
-            border-collapse: collapse;
-            mso-table-lspace: 0pt;
-            mso-table-rspace: 0pt;
-            max-width: 600px !important;
-        }
-        td {
-            padding: 0;
+        @media (max-width: 600px) {
+            .footer-unsubscribe-wrapper {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .footer-unsubscribe-wrapper table {
+                width: 100% !important;
+            }
         }
     </style>
 </head>
-<body>
-    <div class="email-container">
+<body style="margin: 0; padding: 20px; background: #f5f5f5; font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: flex-start; min-height: 100vh;">
+    <div class="email-container" style="max-width: 600px; width: 100%; margin: 0 auto; background: #333333; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #333333;">
 <tr>
-    <td align="left" style="padding:30px;Margin:0"><!--[if mso]><table style="width:540px" cellpadding="0" cellspacing="0"><tr><td style="width:322px" valign="top"><![endif]-->
-        <table cellpadding="0" cellspacing="0" class="cf" align="left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-            <tbody><tr>
-                <td class="bu" align="left" style="padding:0;Margin:0;width:322px">
-                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                        <tbody><tr>
-                            <td align="left" class="ck" style="padding:0;Margin:0"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;line-height:21px;color:#FFFFFF;font-size:14px">To stop receiving this email. <a target="_blank" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#FFFFFF;font-size:14px" href="">Unsubscribe</a></p></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table><!--[if mso]></td><td style="width:20px"></td><td style="width:198px" valign="top"><![endif]-->
-        <table cellpadding="0" cellspacing="0" class="cg" align="right" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
-            <tbody><tr>
-                <td align="left" style="padding:0;Margin:0;width:198px">
-                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                        <tbody><tr>
-                            <td align="right" class="ck" style="padding:0;Margin:0;font-size:0">
-                                <table cellpadding="0" cellspacing="0" class="bp bo" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                                    <tbody><tr>
-                                        <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#FFFFFF;font-size:14px"><img src="/assets/logo-white/facebook-logo-white.png" alt="Fb" title="Facebook" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a></td>
-                                        <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#FFFFFF;font-size:14px"><img src="/assets/logo-white/instagram-logo-white.png" alt="Ig" title="Instagram" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a></td>
-                                        <td align="center" valign="top" style="padding:0;Margin:0"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#FFFFFF;font-size:14px"><img src="/assets/logo-white/youtube-logo-white.png" alt="Yt" title="Youtube" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a></td>
-                                    </tr>
-                                </tbody></table></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table><!--[if mso]></td></tr></table><![endif]--></td>
+    <td align="left" style="padding:30px;Margin:0">
+        <div class="footer-unsubscribe-wrapper">
+            <!--[if mso]><table style="width:540px" cellpadding="0" cellspacing="0"><tr><td style="width:322px" valign="top"><![endif]-->
+            <table cellpadding="0" cellspacing="0" class="cf" align="left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left;flex:1;min-width:0;">
+                <tbody><tr>
+                    <td class="bu" align="left" style="padding:0;Margin:0;width:322px">
+                        <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                            <tbody><tr>
+                                <td align="left" class="ck" style="padding:0;Margin:0"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;line-height:21px;color:#FFFFFF;font-size:14px">To stop receiving this email. <a target="_blank" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#FFFFFF;font-size:14px" href="">Unsubscribe</a></p></td>
+                            </tr>
+                        </tbody></table></td>
+                </tr>
+            </tbody></table><!--[if mso]></td><td style="width:20px"></td><td style="width:198px" valign="top"><![endif]-->
+            <table cellpadding="0" cellspacing="0" class="cg" align="right" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right;flex:0 0 auto;">
+                <tbody><tr>
+                    <td align="left" style="padding:0;Margin:0;width:198px">
+                        <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                            <tbody><tr>
+                                <td align="right" class="ck" style="padding:0;Margin:0;font-size:0">
+                                    <table cellpadding="0" cellspacing="0" class="bp bo" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                                        <tbody><tr>
+                                            <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#FFFFFF;font-size:14px"><img src="/assets/logo-white/facebook-logo-white.png" alt="Fb" title="Facebook" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a></td>
+                                            <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#FFFFFF;font-size:14px"><img src="/assets/logo-white/instagram-logo-white.png" alt="Ig" title="Instagram" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a></td>
+                                            <td align="center" valign="top" style="padding:0;Margin:0"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#FFFFFF;font-size:14px"><img src="/assets/logo-white/youtube-logo-white.png" alt="Yt" title="Youtube" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a></td>
+                                        </tr>
+                                    </tbody></table></td>
+                            </tr>
+                        </tbody></table></td>
+                </tr>
+            </tbody></table><!--[if mso]></td></tr></table><![endif]-->
+        </div>
+    </td>
 </tr>
         </table>
     </div>
 </body>
 </html>
-
